                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * moved pyjamas.__pyjamas__ to __pyjamas__, this way the translator
   now removes any import from __pyjamas__ this module is not existent
   in javascript, only in python. if there is a requirement to a
   function in __pyjamas__ in javascript, it does not belong there.

 * added flag handling to overrides for translator, see
   translator.txt. it is now possible to override a whole
   module. which is now actually used for pyjamas.Window so we do not
   need to build gtk.py for browser, which saves about 400k of
   generated code if pyjamas.Window is used. in the future we should
   add more such flags for overrides and get rid of all the "if
   sys.platform.." stuff.

 * fixed pyjamas.Window.getClientWidth/Height on IE. removed
   conditionals from __browser__ implementation in those functions.

 * prevent usage of builtin names in pyjslib, this causes javascript
   errors at least in javascript lint. int and float are now int_
   float_ in javascript. for python code nothing should change.

 * re-added the --cache-buster option, which now also works along with
   --multi-file. both options are now enabled in libtest build.

 * fixed a bug in linker which caused js_libs to be duplicated when
   called twice in a process. this only affects tests, not console
   scripts.

 * added --multi-file option to browser linker to generate script tags
   instead of including the whole code in one file. now it is possible
   to really work with firebug because of the small files. added this
   option to build.sh of libtest by default.

 * fixed browser linker which didn't take js_includes into account

 * use python's standard logging module for displaying messages in the
   linker. The browser linker now takes a -l option for specifying the
   python log level. e.g -l 0 displays all log messages
