@@ -1,11 +1,6 @@
 from UnitTest import UnitTest
 
 class TupleTest(UnitTest):
-    def __init__(self):
-        UnitTest.__init__(self)
-
-    def getName(self):
-        return "Tuple"
 
     def testContains(self):
         value = (0, 1, 2, 3, 4)
