@@ -1,4 +1,7 @@
-<html><head><script>
+<html><head>
+  <meta http-equiv="PRAGMA" content="NO-CACHE">
+  <meta http-equiv="EXPIRES" content="-1">
+    <script>
 
 window["provider$user.agent"] = function() {
   var ua = navigator.userAgent.toLowerCase();
