@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * fixed Window listener. Added tests for those
+
  * moved pyjamas.__pyjamas__ to __pyjamas__, this way the translator
    now removes any import from __pyjamas__ this module is not existent
    in javascript, only in python. if there is a requirement to a
